--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Python-NKF 1.0.0 (2024-02-26)
+
+  * nkf 2.1.5
+  * nkf_codecs.py: Support Python 3
+  * Drop Python 2 support
+
 Python-NKF 0.2.0 (2014-09-29)
 
   * Support Python 3 by @ikegami-yukino
