--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,13 @@
+Python-NKF 1.0.2 (2024-02-28)
+
+  * nkf 2.1.5
+
 Python-NKF 1.0.1 (2024-02-27)
 
   * Fix build
 
 Python-NKF 1.0.0 (2024-02-26)
 
-  * nkf 2.1.5
   * nkf_codecs.py: Support Python 3
   * Drop Python 2 support
 
